--- a/techcon-website/index.html
+++ b/techcon-website/index.html
@@ -9,9 +9,10 @@
 <header>
     <h1>TechCon 2024</h1>
     <nav>
-        <a href="about.html">About</a> |
-        <a href="schedule.html">Schedule</a> |
-        <a href="register.html">Register</a> |
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="register.html">Register</a>
         <a href="contact.html">Contact</a>
     </nav>
 </header>
