--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -50,10 +50,9 @@
             </tbody>
         </table>
     </main>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
-    </footer>
 </body>
 </html>
+<!-- Footer -->
+<footer>
+    <p>© 2024 TechCon. All rights reserved. All content and design © copyright TechCon 2024.</p>
+</footer>
