--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -9,7 +9,8 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Register for TechCon 2024</h1>
+        <h1>Contact Us</h1>
+        <h2>Register for TechCon 2024</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
