--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -3,67 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register for TechCon 2024</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contact Us - TechCon 2024</title>
 </head>
 <body>
+
     <!-- Header -->
     <header>
         <h1>Contact Us</h1>
-        <h2>Register for TechCon 2024</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="register.html">Register</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Main Content -->
     <main>
-        <form action="#" method="post">
-            <!-- Full Name -->
-            <div>
-                <label for="fullname">Full Name:</label>
-                <input type="text" id="fullname" name="fullname" required>
-            </div>
 
-            <!-- Email -->
-            <div>
-                <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
+        <!-- Contact Information -->
+        <section>
+            <h2>Contact Information</h2>
+            <p>Email: <a href="mailto:email@example.com">email@example.com</a></p>
 
-            <!-- Password -->
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
+            <p>Follow us on social media:</p>
+            <ul>
+                <li>
+                    <a href="https://twitter.com/TechCon2024" target="_blank">Twitter</a>
+                </li>
+                <li>
+                    <a href="https://facebook.com/TechCon2024" target="_blank">Facebook</a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com/company/TechCon2024" target="_blank">LinkedIn</a>
+                </li>
+            </ul>
+        </section>
 
-            <!-- Confirm Password -->
-            <div>
-                <label for="confirm-password">Confirm Password:</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
-            </div>
+        <!-- Google Map -->
+        <section>
+            <h2>Conference Location</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019769043122!2d-122.4194154846814!3d37.77492927975978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808c5b6b8e77%3A0xe48fbc0c6b6b8e77!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1699999999999"
+                width="100%"
+                height="300"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy">
+            </iframe>
+        </section>
 
-            <!-- Terms and Conditions -->
-            <div>
-                <input type="checkbox" id="terms" name="terms" required>
-                <label for="terms">I agree to the Terms and Conditions</label>
-            </div>
+        <!-- Contact Form -->
+        <section>
+            <h2>Contact Us</h2>
+            <form action="#" method="post">
 
-            <!-- Submit Button -->
-            <div>
-                <button type="submit">Register Now</button>
-            </div>
-        </form>
+                <div>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+
+                <div>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+
+                <div>
+                    <button type="submit">Send Message</button>
+                </div>
+
+            </form>
+        </section>
+
     </main>
 
     <!-- Footer -->
     <footer>
         <p>© 2024 TechCon. All rights reserved. All content and design © copyright TechCon 2024.</p>
     </footer>
+
 </body>
 </html>
+
