--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -26,7 +26,7 @@
         <!-- Contact Information -->
         <section>
             <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:email@example.com">email@example.com</a></p>
+            <p>Email: <a href="phalonsylvia3@gmail.com>email@example.com</a></p>
 
             <p>Follow us on social media:</p>
             <ul>
