--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -7,88 +7,68 @@
 </head>
 <body>
 
-    <!-- Header -->
-    <header>
-        <h1>Contact Us</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="register.html">Register</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <h1>Contact Us</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="register.html">Register</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <!-- Main Content -->
-    <main>
+<main>
 
-        <!-- Contact Information -->
-        <section>
-            <h2>Contact Information</h2>
-            <p>Email: <a href="phalonsylvia3@gmail.com>email@example.com</a></p>
+    <section>
+        <h2>Contact Information</h2>
+        <p>Email: <a href="mailto:email@example.com">email@example.com</a></p>
 
-            <p>Follow us on social media:</p>
-            <ul>
-                <li>
-                    <a href="https://twitter.com/TechCon2024" target="_blank">Twitter</a>
-                </li>
-                <li>
-                    <a href="https://facebook.com/TechCon2024" target="_blank">Facebook</a>
-                </li>
-                <li>
-                    <a href="https://linkedin.com/company/TechCon2024" target="_blank">LinkedIn</a>
-                </li>
-            </ul>
-        </section>
+        <p>Social Media:</p>
+        <ul>
+            <li><a href="https://twitter.com/TechCon2024" target="_blank">Twitter</a></li>
+            <li><a href="https://facebook.com/TechCon2024" target="_blank">Facebook</a></li>
+            <li><a href="https://linkedin.com/company/TechCon2024" target="_blank">LinkedIn</a></li>
+        </ul>
+    </section>
 
-        <!-- Google Map -->
-        <section>
-            <h2>Conference Location</h2>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019769043122!2d-122.4194154846814!3d37.77492927975978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808c5b6b8e77%3A0xe48fbc0c6b6b8e77!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1699999999999"
+    <section>
+        <h2>Location</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019769043122!2d-122.4194154846814!3d37.77492927975978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808c5b6b8e77%3A0xe48fbc0c6b6b8e77!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1699999999999"
                 width="100%"
                 height="300"
                 style="border:0;"
                 allowfullscreen=""
                 loading="lazy">
-            </iframe>
-        </section>
+        </iframe>
+    </section>
 
-        <!-- Contact Form -->
-        <section>
-            <h2>Contact Us</h2>
-            <form action="#" method="post">
+    <section>
+        <h2>Contact Us</h2>
+        <form action="#" method="post">
 
-                <div>
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
 
-                <div>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
 
-                <div>
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
 
-                <div>
-                    <button type="submit">Send Message</button>
-                </div>
+            <button type="submit">Send Message</button>
 
-            </form>
-        </section>
+        </form>
+    </section>
 
-    </main>
+</main>
 
-    <!-- Footer -->
-    <footer>
-        <p>© 2024 TechCon. All rights reserved. All content and design © copyright TechCon 2024.</p>
-    </footer>
+<footer>
+    <p>© 2024 TechCon. All rights reserved. All content and design © copyright TechCon 2024.</p>
+</footer>
 
 </body>
 </html>
+
 
